# FUN4

./: CMakeLists.txt  Finding_Workspace.ipynb  README.md  package.xml
config/: display.rviz
launch/: fun.launch.py  simple_display.launch.py
robot/visual/: my-robot copy.xacro  my-robot.xacro
scripts/: controller.py  dummy_script.py  jointstate_script.py  random_node.py  scheduler_node.py  test.py
srv/: CallRandomPos.srv  ControllerMode.srv
